input bug on iphone

--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -54,14 +54,6 @@
   appearance: none;
 }
 
-/* input:not([type=checkbox]):not([type=radio]),
-textarea,
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-} */
-
 .auth-form__input:invalid {
   color: #EE3465;
 }
