--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -25,11 +25,6 @@
   text-align: left;
   padding: 0 0 0 22px;
   outline: none;
-}
-
-input:not([type=checkbox]):not([type=radio]),
-textarea,
-select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
